kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Moviedatabase
  labels:
    app: Moviedatabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: Moviedatabase
  template:
    metadata:
      labels:
        app: Moviedatabase
    spec:
      containers:
        - name: Moviedatabase
          image: ghcr.io/shaikimtiazali/moviedatabase:sha-ab9e132b99c847ee1da36b93187e6aa6e2e533ba
          imagePullPolicy: Always
          ports:
            - containerPort: 80
        - resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.2" 
              memory: "256Mi"
          livelinessProbe:
            httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          readinessProbe:
          httpGet: /
          port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
      imagePullSecrets:
        - name: github-container-registry
